--- a/frmmain.lfm
+++ b/frmmain.lfm
@@ -1,7 +1,7 @@
 object mainForm: TmainForm
-  Left = 317
+  Left = 870
   Height = 681
-  Top = 167
+  Top = 164
   Width = 567
   BorderStyle = bsDialog
   Caption = 'Letter Wizard by DenkaTech'
@@ -14,6 +14,7 @@ object mainForm: TmainForm
   Font.Name = 'Segoe UI'
   Font.Pitch = fpVariable
   Font.Quality = fqDraft
+  FormStyle = fsSystemStayOnTop
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poDesktopCenter
@@ -30,11 +31,14 @@ object mainForm: TmainForm
   object cmbSenders: TComboBox
     Left = 185
     Height = 25
+    Hint = 'Selecteer de naam van de afzender'
     Top = 73
     Width = 368
     ItemHeight = 17
     OnChange = cmbSendersChange
     OnSelect = cmbSendersSelect
+    ParentShowHint = False
+    ShowHint = True
     Style = csDropDownList
     TabOrder = 1
   end
@@ -82,7 +86,8 @@ object mainForm: TmainForm
   end
   object groupSalutation: TRadioGroup
     Left = 188
-    Height = 80
+    Height = 58
+    Hint = 'Selecteer de aanhef voor de brief'
     Top = 430
     Width = 369
     AutoFill = True
@@ -94,7 +99,7 @@ object mainForm: TmainForm
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 2
-    ClientHeight = 58
+    ClientHeight = 36
     ClientWidth = 365
     Color = 10276756
     Columns = 2
@@ -114,12 +119,15 @@ object mainForm: TmainForm
     ParentBackground = False
     ParentFont = False
     ParentColor = False
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 3
   end
   object groupSignature: TRadioGroup
     Left = 186
     Height = 80
-    Top = 522
+    Hint = 'Selecteer waarmee de brief wordt ondertekend'
+    Top = 496
     Width = 369
     AutoFill = True
     Caption = 'Ondertekening'
@@ -141,6 +149,8 @@ object mainForm: TmainForm
       'Met achting,'
       'Hoogachtend,'
     )
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 4
   end
   object Button1: TButton
@@ -148,6 +158,7 @@ object mainForm: TmainForm
     Height = 25
     Top = 618
     Width = 75
+    Cancel = True
     Caption = 'Sluit'
     OnClick = Button1Click
     TabOrder = 5
@@ -163,8 +174,11 @@ object mainForm: TmainForm
   object editSubject: TEdit
     Left = 188
     Height = 25
+    Hint = 'Voor hier het onderwerp van de brief in.'
     Top = 403
     Width = 367
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 6
     TextHint = 'Geef hier het onderwerp van de brief'
   end
@@ -45109,7 +45123,7 @@ object mainForm: TmainForm
     }
     Stretch = True
   end
-  object StatusBar1: TStatusBar
+  object StatusBar: TStatusBar
     Left = 0
     Height = 23
     Top = 658
@@ -45139,10 +45153,162 @@ object mainForm: TmainForm
     ScrollBars = ssAutoBoth
     TabOrder = 8
   end
+  object cbSocialSecurityInclude: TCheckBox
+    Left = 192
+    Height = 21
+    Hint = 'Aanvinken om rijksregisternummer in het document weer te geven'
+    Top = 585
+    Width = 286
+    Caption = 'Rijksregisternummer toevoegen aan Afzender'
+    OnChange = cbSocialSecurityIncludeChange
+    ParentShowHint = False
+    ShowHint = True
+    TabOrder = 9
+  end
+  object btnSettings: TBitBtn
+    Left = 16
+    Height = 50
+    Top = 24
+    Width = 144
+    Caption = 'Settings'
+    Glyph.Data = {
+      36100000424D3610000000000000360000002800000020000000200000000100
+      2000000000000010000064000000640000000000000000000000000000000000
+      00000000000000000000000000000000000000000000000000004B4949315F5D
+      5D7A000000000000000000000000000000000000000000000000ACAAAA77A19F
+      9EB8726F6E597572710900000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000004B49493B636161BC7E7B7AFF9491
+      90FF87858475000000000000000000000000000000009C9A991FD1CFCFF5D3D1
+      D0FFC7C5C4FFAAA8A7F17E7B7A26000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000007371708E898685FF949190FF9E9C
+      9AFFA5A3A1FA918F8E38000000000000000000000000C5C3C2B0D3D2D0FFCDCC
+      CBFFC7C6C4FFBEBCBAFF83817F07000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      00000000000000000000000000000000000078767552939190FF9E9B9AFFA8A6
+      A5FFB3B1B0FFB5B3B1E2A8A6A5C1B7B5B4CCB9B7B6CDD1D0CFFFCDCCCBFFC8C6
+      C5FFC2C0BEFFB6B4B3E800000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000000000000000000000000000605E5D179C9998FFA8A6A5FFB3B1
+      AFFFBDBBBAFFC8C6C5FFD2D1CFFFD8D6D5FFD3D2D0FFCECCCBFFC8C6C5FFC2C0
+      BEFFBCBAB9FFAEABAAC700000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000006E6B6A0F9F9D9CF0B3B1AFFFBDBB
+      BAFFC8C6C5FFC8C7C5FFC0BEBEFFBCBBBAFFC4C2C1FFCDCBCAFFC8C6C4FFBCBA
+      B9FFB7B5B3FFA9A7A5F583817F5C000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000726F6E0E939190CEB3B1AFFFBDBBBAFFD4D2
+      D1FFD3D1D0FFD4D2D1FFDAD8D8FFDAD8D8FFDAD8D8FFDAD8D8FFDDDCDCFFADAB
+      AAFFA9A7A6FFABA9A7FFA09D9CFF7D7A7A666664640E8D8B8A49A3A1A0848785
+      8486000000000000000000000000000000000000000000000000000000007370
+      6F8183807F908A8786688E8B8A4292908EB5B3B0AFFFBBB9B7FFBCBAB9FFD7D5
+      D4FFD0CFCDFFD0CFCDFFD0CFCDFFD0CFCDFFD0CFCDFFD0CFCDFFD0CFCDFFD0CF
+      CDFFADABAAFF989694FFA09E9DFF9E9C9AFDA6A4A2FEB2B0AFFFBAB8B6FFA8A6
+      A5FE5553532400000000000000000000000000000000000000006E6B6A18817F
+      7EFE93908FFF9E9B9AFFA8A6A4FFB2B0AFFFBDBBB9FF9C9A99FFC4C2C1FFC6C4
+      C3FFC6C4C3FFC6C4C3FFC6C4C3FFC6C4C3FFC6C4C3FFC6C4C3FFC6C4C3FFC6C4
+      C3FFC6C4C3FFACAAA9FF979594FFAAA8A7FFB2B0AFFFBAB8B6FFC1C0BEFFC9C7
+      C6FF807F7E970000000000000000000000000000000000000000787674759290
+      8FFF9E9B9AFFA8A6A4FFB2B0AFFFBDBBB9FFA9A7A6FFB3B1AFFFBBB9B8FFBBB9
+      B8FFBBB9B8FFBBB9B8FFBAB8B7FFB3B0AFEBBFBDBCF8BCBAB9FFBBB9B8FFBBB9
+      B8FFBBB9B8FFBCBAB8FF999896FFB1AFADFFBAB8B6FFC1BFBEFFC9C7C6FFD1CF
+      CEFFB1AFAEE96059590100000000000000000000000000000000898685BC9D9B
+      9AFFA8A5A4FFB2B0AFFFBDBBB9FFC7C6C4FF999796FFB1AFAEFFB1AFADFFB1AF
+      ADFFAFADACFFC0BEBDA6CBC9C71C00000000DFDEDE01ADABAB55A7A5A3E5B1AF
+      ADFFB1AFADFFB1AFADFFB0AEACFFA19F9DFFC1BFBEFFC9C7C6FFD1CFCEFFC7C5
+      C4CA9695942200000000000000000000000000000000000000008581800D9E9C
+      9B91B0AEADFEBDBBB9FFC7C6C4FFBFBEBCFFA19F9DFFAAA8A6FFAAA8A6FFAAA8
+      A6FF8D8B8AA7000000000000000000000000000000000000000075737127A2A0
+      9EF6AAA8A6FFAAA8A6FFABA9A7FF9D9B9AFFC9C7C6FFCDCCCAFFB7B5B490615E
+      5E05000000000000000000000000000000000000000000000000000000000000
+      00009F9D9B32BBB9B7E5D2D0CFFFB7B5B4FFB2B0AFFFB3B1B0FFB3B1B0FFACAA
+      A9FF504E4E1E0000000000000000000000000000000000000000000000009896
+      959AB3B1B0FFB3B1B0FFB3B1B0FF989695FFD1CFCEFFCFCDCCFF6A6867330000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000AFADACCBD8D6D5FFB4B2B1FFBAB8B6FFBEBCBAFFBEBCBAFFB1AF
+      AEEC00000000000000000000000000000000000000000000000000000000AEAC
+      AB66BEBCBAFFBEBCBAFFBEBCBAFFACA9A8FFD7D5D5FFDFDEDEFF747170430000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000B0AEAEC4D4D2D1FFB7B5B4FFC1BFBEFFC8C6C5FFC8C6C5FFC1BF
+      BDF8A5A6A401000000000000000000000000000000000000000000000000D2D0
+      CF71C8C6C5FFC8C6C5FFC8C6C5FFCFCDCDFFDFDEDEFFE6E5E5FF7D7B7A3D0000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000B2B1AFA8CECCCBFFBEBCBBFFBFBDBCFFD2D1CFFFD2D1CFFFD2D0
+      CFFFBFBDBC4E000000000000000000000000000000000000000000000000C3C1
+      C0C5D2D1CFFFD2D1CFFFD2D1CFFFC5C3C2FFE7E6E6FFEAE9E9FFD6D4D4E3B5B4
+      B250000000000000000000000000000000000000000000000000000000006260
+      5F08B9B7B694CBCAC8FFC8C6C5FFC1BFBEFFB3B1B0FFD2D1CFFFD2D1CFFFD2D1
+      CFFFCCCBC9E1B1AFAE1F00000000000000000000000000000000C8C7C67AD1CF
+      CEFFD2D1CFFFD2D1CFFFCAC8C7FFC4C2C2FFEAE9E9FFDFDEDEFFD1D0CEFFC3C1
+      BFFFAEACAAB1A09D9C1C0000000000000000000000000000000092909021C4C2
+      C1CBCECCCBFFC8C6C5FFC3C1BFFFBDBBB9FFAFADACFFBFBDBCFFC7C5C3FFC7C5
+      C3FFC7C5C3FFC0BEBCF1A9A7A58882807F5B908E8D67C1BFBEBFC8C6C5FFC7C5
+      C3FFC7C5C3FFC7C5C3FFA4A2A1FFDCDADAFFDFDEDEFFD1D0CFFFC3C1C0FFB5B3
+      B2FFA7A5A3FFA29F9E31000000000000000000000000000000006B696964C7C6
+      C4FFC8C7C5FFC3C1BFFFBDBBB9FFB7B5B3FFB3B1AFFFA6A4A3FFB4B2B1FFB6B3
+      B2FFB6B3B2FFB6B3B2FFB6B3B2FFB6B3B2FFB6B3B2FFB6B3B2FFB6B3B2FFB6B3
+      B2FFB6B3B2FFACAAA8FFBCBAB9FFDFDEDEFFD1D0CFFFC4C2C0FFB5B3B2FFA7A5
+      A4FF9B9897D30000000000000000000000000000000000000000575554079D9B
+      9AE9C3C1BFFFBDBBB9FFB7B5B3FFB1AFAEFFACA9A8FFA9A7A6FF989694FF9E9C
+      9BFF9F9D9CFF9F9D9CFF9F9D9CFF9F9D9CFF9F9D9CFF9F9D9CFF9F9D9CFF9F9D
+      9CFF9C9A99FFBEBCBBFFDDDCDCFFD2D0CFFFBEBCBBE3B2B0AEFBA7A5A4FF9997
+      96FF8D8B8A760000000000000000000000000000000000000000000000006C6A
+      6A78B9B7B6FFAEACABEFA6A4A3B496939299A09E9DFFA19E9DFFA4A2A1FF918F
+      8EFF848281FF868482FF868482FF868482FF868482FF868482FF858382FFA09E
+      9DFFD9D7D7FFDFDDDDFFD2D0CFFFB7B5B3DB9C9A980D000000008F8C8B248B89
+      874B848281150000000000000000000000000000000000000000000000005A58
+      58106967672F000000000000000000000000817E7D709D9B9AFFAAA8A6FFB1AE
+      ADFFA5A3A1FF858281FF6A6766FF686665FF676463FF6E6B6BFFA3A1A0FFDFDD
+      DDFFE0DEDEFFD2D0CFFFB7B5B4DE9592911E0000000000000000000000004E4E
+      4E034C4A4A1A0000000000000000000000000000000000000000000000000000
+      000000000000000000000000000000000000000000008D8B8966B2AFAEFFB9B7
+      B5FFC1BFBDFFC8C6C5FFCDCBCAFFC7C6C5FFD3D2D2FFE6E5E5FFEBE9E9FFE0DF
+      DEFFD2D0CFFFC4C2C1FFAEACAA83000000000000000000000000000000008785
+      84CB9D9A99CC00000000C2C0BF3AB3B2B0767C7A790200000000000000000000
+      00000000000000000000000000000000000000000000A4A2A15EB9B7B5FFC1BF
+      BDFFC8C6C5FFD0CECDFFD8D6D5FFDFDEDEFFE7E5E5FFEAE9E8FFE0DFDEFFD2D0
+      CFFFC4C2C1FFB6B4B2FFA3A19FBF00000000696766097F7C7B388F8C8C22AEAB
+      AAE3C0BEBDFFC4C2C1E7CAC8C7F3C2C0BFEE8482800700000000000000000000
+      00000000000000000000000000000000000000000000B2B0AE85C1BFBDFFC8C6
+      C5FFD0CECDFFD8D6D5FFC7C5C5AAA6A4A3669C999864A09E9D4DCDCBCAF3C4C2
+      C1FFB6B4B3FFA8A6A4FF969493F9666361048E8C8B72A4A1A0FFB0AEACFDB4B2
+      B0FFC3C1C0FFCDCBCAFFCDCCCBFFA9A6A5E3706E6D0B00000000000000000000
+      00000000000000000000000000000000000000000000BBB9B8AAC8C6C5FFD0CE
+      CDFFD7D6D5FFD6D5D5E79B99970D000000000000000000000000AAA8A75DB5B3
+      B2FFA8A6A5FF999695FF7F7C7BF45F5D5C27A19F9D0EC1BFBEDCB7B5B4FFB5B2
+      B1FCB1AFAD91BEBCBAA2C8C7C5FFB0AEADFFAFADABDDAEACAAA1000000000000
+      00000000000000000000000000000000000000000000A3A1A052B2B0AFBBC4C2
+      C1FEDDDBDBFFC1C0BF5800000000000000000000000000000000000000009694
+      93A7868383EB6866667D5B595911000000009593920BCBCAC9DAC3C2C0FFC4C2
+      C1A20000000000000000ABA9A7C6B4B2B1FFC6C4C2FCC4C2C199000000000000
+      0000000000000000000000000000000000000000000000000000000000008D89
+      891C918E8D660000000000000000000000000000000000000000000000005C5A
+      590A5B59590A00000000000000005F5D5C06C1C0BEECC0BEBDFFADABA9FFBFBD
+      BBB9000000009D9A9907B9B7B5DABCBAB8FFD0CFCEA700000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000000000000000000000000000AFADAB8BAAA8A7BD9A9896FF9997
+      96FFAAA8A7D5C9C7C6DFCCCAC9FFD1D0CFFFD2D0D0DDACA9A81D000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      000000000000000000000000000000000000000000007774730AB0AEADF5A4A2
+      A0FF969493FFB9B8B7FFCFCDCCFFCAC8C7D2ABA9A8F9A19E9D35000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      00000000000000000000000000000000000000000000B1AFAD32CAC8C7FFD0CE
+      CDC7DDDBDBB2D6D4D3FFBCBAB9AE000000008582810B00000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000BCBAB943B4B3
+      B20900000000A4A1A0C08F8D8C74000000000000000000000000
+    }
+    OnClick = btnSettingsClick
+    TabOrder = 10
+  end
   object SQLConnection: TSQLite3Connection
     Connected = False
     LoginPrompt = False
-    AfterConnect = SQLConnectionAfterConnect
     DatabaseName = 'C:\Development\Lazarus\LetterWizard\Twister.db'
     KeepConnection = False
     Transaction = SQLTransaction
