--- a/lib/x86_64-win64/frmsettings.lfm
+++ b/lib/x86_64-win64/frmsettings.lfm
@@ -1,23 +1,30 @@
 object FormSettings: TFormSettings
-  Left = 289
+  Left = 408
   Height = 200
-  Top = 135
+  Top = 251
   Width = 589
   Caption = 'Instellingen'
   ClientHeight = 200
   ClientWidth = 589
+  Color = 12238683
+  Font.Height = -13
+  Font.Name = 'Segoe UI'
+  Position = poOwnerFormCenter
   LCLVersion = '2.2.6.0'
   object Label1: TLabel
     Left = 160
-    Height = 15
+    Height = 17
     Top = 16
-    Width = 160
+    Width = 181
     Caption = 'Pad naar database (Twister.db)'
+    Font.Height = -13
+    Font.Name = 'Segoe UI'
     ParentColor = False
+    ParentFont = False
   end
   object editDBPath: TEdit
     Left = 160
-    Height = 23
+    Height = 25
     Top = 32
     Width = 392
     TabOrder = 0
@@ -25,21 +32,22 @@ object FormSettings: TFormSettings
   end
   object btnTwisterDB: TSpeedButton
     Left = 555
-    Height = 22
+    Height = 25
     Top = 32
     Width = 23
+    Caption = '...'
   end
   object Label2: TLabel
     Left = 160
-    Height = 15
+    Height = 17
     Top = 64
-    Width = 155
+    Width = 171
     Caption = 'Pad naar Template document'
     ParentColor = False
   end
   object editDBPath1: TEdit
     Left = 160
-    Height = 23
+    Height = 25
     Top = 80
     Width = 392
     TabOrder = 1
@@ -47,21 +55,22 @@ object FormSettings: TFormSettings
   end
   object btnTemplate: TSpeedButton
     Left = 555
-    Height = 22
+    Height = 25
     Top = 80
     Width = 23
+    Caption = '...'
   end
   object Label3: TLabel
     Left = 160
-    Height = 15
+    Height = 17
     Top = 112
-    Width = 112
+    Width = 124
     Caption = 'Bestanden opslaan in'
     ParentColor = False
   end
   object editDBPath2: TEdit
     Left = 160
-    Height = 23
+    Height = 25
     Top = 128
     Width = 392
     TabOrder = 2
@@ -69,9 +78,10 @@ object FormSettings: TFormSettings
   end
   object btnOutputPath: TSpeedButton
     Left = 555
-    Height = 22
+    Height = 25
     Top = 128
     Width = 23
+    Caption = '...'
   end
   object btnSave: TButton
     Left = 424
@@ -81,13 +91,14 @@ object FormSettings: TFormSettings
     Caption = 'Bewaar'
     TabOrder = 3
   end
-  object btnClose: TButton
+  object btnCLoseM: TButton
     Left = 503
     Height = 25
     Top = 160
     Width = 75
     Cancel = True
     Caption = 'Sluit'
+    OnClick = btnCLoseMClick
     TabOrder = 4
   end
   object Image1: TImage
